# autoTable

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: build.yml  codestyle.yml
autotable/: __main__.py  cmd.py  command.py  constant.py  settings.py
autotable/api/: __init__.py  issues.py  prs.py
autotable/autotable_type/: __init__.py  autotable_type.py  github_type.py
autotable/model/: tracker_issues_data.py
autotable/processor/: __init__.py  analysis.py  file.py  github_issue.py  github_prs.py  github_stats.py  github_title.py  utils.py
autotable/storage_model/: __init__.py  pull_data.py  table.py  tracker_issues_data.py
autotable/utils/: appdirs.py  async_exe.py  fetcher.py  migrate.py  strtool.py
example/init_issue/: README.md  demo.md
example/setting/: README.md
mcp-server/: README.md  main.py  pyproject.toml
tests/: test_analysis.py  test_github_issue.py  test_github_title.py  test_init_issue_table.py  test_migrate.py  test_setting.py  test_storage_model.py  test_strtool.py  test_type.py  test_update_issue_table.py  test_update_pr_table.py  test_update_stats.py  util.py
