[project]
name = "autoTable"
version = "0.3.0"
description = "update tracking issue table automatically"
authors = [{ name = "gouzil", email = "530971494@qq.com" }]
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.10.0",
    "githubkit>=0.12.0",
    "rich>=13.7.0",
    "mistletoe>=1.2.1",
    "pytest>=8.1.1",
    "appdirs>=1.4.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "xdoctest>=1.2.0",
]

[project.scripts]
autotable = "autotable.__main__:app"

[tool.ruff]
line-length = 120
src = ["autotable", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "Q",
    "F",
    "SIM",
    "UP",
    "FA",    # flake8-annotations
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "PGH",   # pygrep-hooks
    "RUF",   # ruff
    "E",     # pycodestyle
    "W",     # pycodestyle
    "YTT",   # flake8-2020
    "T10",   # flake8-debugger
    "TID",   # flake8-tidy-imports
    "ASYNC", # flake8-async
    "RUF",   # ruff
    "N",     # pep8-naming
    "PL",    # Pylint
    "PTH",   # flake8-use-pathlib
]

ignore = ["PLR0911", "PLR0912"]

[tool.ruff.lint.isort]
known-first-party = ["autotable"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]
"autotable/__main__.py" = ["PLR0913"]

[tool.pyright]
include = ["autotable"]

[tool.hatch.build.targets.wheel]
packages = ["autotable"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
